[workspace]
resolver = "2"

members = [
  "pkg/*"
]

[workspace.dependencies]
parking_lot = "0"
tracing = "0"
tracing-subscriber = "0"
anyhow = "1"
thiserror = "1"
bevy = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
serde_json = "1"
bevy_rapier3d = { version = "0.22.0", features = [ "simd-stable", "debug-render-3d" ] }