[workspace]

[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bevity = { path = "../../../pkg/bevity" }
bevy = { version = "0.11" }
bevy-tnua = { version = "0.11.0", features = ["rapier_3d"] }
bevy_third_person_camera = "0.1.0"
bevy_rapier3d = { version = "0.22.0", features = [ "simd-stable", "debug-render-3d" ] }
serde_json = "1"
bevy-inspector-egui = "0.20"
tracing = "0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
anyhow = "1"
bevity = { path = "../../../pkg/bevity" }